<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.hibernate.demos</groupId>
    <artifactId>hibernate-orm-on-java9-modules</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>Hibernate ORM 5 as Java 9 automatic modules</name>

    <properties>
        <version.com.h2database>1.4.196</version.com.h2database>
        <version.junit>4.12</version.junit>
        <version.org.hibernate>5.3.0.Final</version.org.hibernate>
        <version.org.log4j>1.2.17</version.org.log4j>
        <modules.dir>${project.build.directory}/modules</modules.dir>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <!-- Module: java.transaction -->
                <groupId>org.jboss.spec.javax.transaction</groupId>
                <artifactId>jboss-transaction-api_1.2_spec</artifactId>
                <version>2.0.0.Alpha1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>${version.org.hibernate}</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${version.com.h2database}</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>${version.org.log4j}</version>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.7.0</version>
                    <configuration>
                        <release>9</release>
                        <compilerArgs>
                            <arg>-classpath</arg>
                            <arg>${project.build.directory}/target/classes</arg>
                            <arg>--module-path=${modules.dir}</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                    <configuration>
                        <outputDirectory>${modules.dir}</outputDirectory>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.20.1</version>
                    <configuration>
                        <argLine>--add-modules java.xml.bind</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${modules.dir}</outputDirectory>
                            <includeScope>compile</includeScope>
                            <excludeArtifactIds>jboss-transaction-api_1.2_spec</excludeArtifactIds>
                        </configuration>
                    </execution>
                    <execution>
                        <id>copy-additional-modules</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${modules.dir}</outputDirectory>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.jboss.spec.javax.interceptor</groupId>
                                    <artifactId>jboss-interceptors-api_1.2_spec</artifactId>
                                    <version>1.0.1.Final</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>javax.enterprise</groupId>
                                    <artifactId>cdi-api</artifactId>
                                    <version>2.0</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.jboss.spec.javax.transaction</groupId>
                                    <artifactId>jboss-transaction-api_1.2_spec</artifactId>
                                    <version>2.0.0.Alpha1</version>
                                    <outputDirectory>${project.build.directory}/upgrade-modules</outputDirectory>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>net.bytebuddy</groupId>
                                    <artifactId>byte-buddy</artifactId>
                                    <version>1.8.0</version>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.moditect</groupId>
                <artifactId>moditect-maven-plugin</artifactId>
                <version>1.0.0-SNAPSHOT</version>
                <executions>
                    <execution>
                        <id>add-module-info-to-dependencies</id>
                        <phase>generate-resources</phase>
                        <configuration>
                            <outputDirectory>${modules.dir}</outputDirectory>
                            <overwriteExistingFiles>true</overwriteExistingFiles>
                            <modules>
                                <module>
                                    <artifact>
                                        <groupId>javax.persistence</groupId>
                                        <artifactId>javax.persistence-api</artifactId>
                                        <version>2.2</version>
                                    </artifact>
                                    <moduleInfo>
                                        <name>java.persistence</name>
                                        <exports>*;</exports>
                                        <uses>javax.persistence.spi.PersistenceProvider</uses>
                                    </moduleInfo>
                                </module>
                            </modules>
                        </configuration>
                        <goals>
                            <goal>add-module-info</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>integration-test</id>
                        <phase>integration-test</phase>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>--module-path=${modules.dir}</argument>
                                <argument>--upgrade-module-path=${project.build.directory}/upgrade-modules</argument>
                                <argument>--add-modules=java.transaction,java.xml.bind</argument>
                                <argument>-Xdebug</argument>
                                <argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000</argument>
                                <argument>-ea</argument>
                                <argument>--module=com.example/com.example.Main</argument>
                            </arguments>
                        </configuration>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
